EXTRA_DIST =

COMPILE_TARGET = console
ASSEMBLY_COMPILER = CSC
CSC_ARGS = $(CSC_NO_UNSAFE) $(CSC_STRONGNAME)

all: $(ASSEMBLY) $(LINUX_PKGCONFIG) $(ASSEMBLY_WRAPPER)

FILES = \
	AliasDefinition.cs \
	Alignment.cs \
	BarProcessor.cs \
	Box.cs \
	CategoryDefinition.cs \
	CellDefinition.cs \
	CellOrientation.cs \
	IIntersectable.cs \
	LabelDefinition.cs \
	Line.cs \
	Netlist.cs \
	NetlistFormatException.cs \
	NetlistLexerBase.cs \
	NetlistLexerBase.LexerToken.cs \
	NetlistLexerBase.LexerTokenType.cs \
	NetlistNameComparer.cs \
	ParserToken.cs \
	PortDefinition.cs \
	PortDirection.cs \
	Program.cs \
	Properties/AssemblyInfo.cs \
	QuadTree.cs \
	StringEscapeExtension.cs \
	StringHtmlExtension.cs \
	StringUnbarExtension.cs \
	TypeDefinition.cs \
	Vector.cs \
	WireClass.cs \
	WireConnection.cs \
	WireDefinition.cs

DATA_FILES =

RESOURCES =

EXTRAS =

REFERENCES = \
	System \
	System.Drawing

PROJECT_REFERENCES =

DLL_REFERENCES =

CLEANFILES =

include $(top_srcdir)/Makefile.include
